# mtgjson-rs

./: Cargo.toml  README.md
src/: all_printings.rs  booster.rs  card.rs  files.rs  identifiers.rs  language.rs  lib.rs  meta.rs  purchase_urls.rs  sealed_product.rs  set.rs
src/booster/: booster_config.rs  booster_info.rs  booster_sheet.rs  named_booster_info.rs
src/card/: availability.rs  booster_type.rs  border_color.rs  color.rs  duel_deck.rs  finish.rs  foreign_data.rs  frame_effect.rs  frame_version.rs  layout.rs  leadership_skills.rs  legalities.rs  promo_type.rs  rarity.rs  related_cards.rs  ruling.rs  security_stamp.rs  side.rs
src/files/: all_printings.rs  atomic_cards.rs
