[package]
name = "mtgjson"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
serde_path_to_error = "0.1"
