[package]
name = "mtgjson"
authors = ["Rigidity <me@rigidnetwork.com>"]
license = "MIT OR Apache-2.0"
keywords = ["mtg", "magic", "mtgjson", "serde", "data"]
categories = ["data-structures"]
description = "Unofficially provided lightweight models of the data provided by MTGJSON."
homepage = "https://github.com/Rigidity/mtgjson-rs"
repository = "https://github.com/Rigidity/mtgjson-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
serde_path_to_error = "0.1"
